--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,6 +38,7 @@
           {% endif %}
 
           {% if include.type == "post" %}
+            <span> Author {{ page.author }} </span>
             <span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
             {% if page.last-updated %}
               <span class="post-meta">
