--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,9 @@
           {% endif %}
 
           {% if include.type == "post" %}
-            <span> Author {{ page.author }} </span>
+            {% if page.author %}
+              <span> Author {{ page.author | strip_html }} </span>
+            {% endif %}
             <span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
             {% if page.last-updated %}
               <span class="post-meta">
